fix bug: input align style

--- a/src_calendar/Calendar/styles.css
+++ b/src_calendar/Calendar/styles.css
@@ -1,18 +1,6 @@
-html {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  margin: 0px;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height:100%;
-  width: 100%;
+  /* height:100%;
+  width: 100%; */
   margin: 0px;
 }
 
